# BOOKBOT-TEST

./: .env  Dockerfile  Pipfile  README.md  details.json  docker-compose.debug.yml  docker-compose.yml  main.py  pyproject.toml  requirements.txt
cogs/: book_search.py  dev_commands.py  general_commands.py  slash_cmds.py
helper/: cal_hob.py  get_book_dets.py  souper.py
